<?xml version="1.0"?>
<package>
  <name>csapex_math</name>
  <version>0.0.1</version>
  <description>The csapex_math package contains nodes to perform calculations</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>
  <build_depend>csapex_testing</build_depend>

  <run_depend>csapex</run_depend>
  <run_depend>csapex_testing</run_depend>

  <export>
     <csapex plugin="${prefix}/plugins.xml"/>
  </export>
</package>
