<?xml version="1.0"?>
<package>
  <name>csapex_ml</name>

  <version>0.0.1</version>
  <description>
    The csapex_ml package contains a set of machine learning algorithms
    mostly provided by the OpenCV library.
  </description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>
  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>
  <run_depend>csapex</run_depend>

  <build_depend>csapex_core_plugins</build_depend>
  <run_depend>csapex_core_plugins</run_depend>

  <build_depend>csapex_opencv</build_depend>
  <run_depend>csapex_opencv</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" snippets="${prefix}/snippets" />
  </export>
</package>
