<?xml version="1.0"?>
<package format="2">
  <name>csapex_opencv</name>
  <version>0.0.1</version>
  <description>The csapex_opencv package contains basic opencv plug-ins without further depenencies</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>csapex</depend>

  <depend>libopencv-dev</depend>
  <depend>libopencv-contrib-dev</depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
