<?xml version="1.0"?>
<package format="2">
  <name>csapex_plot</name>
  <version>0.0.1</version>
  <description>The csapex_plot package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libqwt-qt5-dev</depend>

  <depend>csapex</depend>
  <depend>csapex_opencv</depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
